# app-simple

./: .gitignore  .gitmodules  CMakeLists.txt
application/: CMakeLists.txt  Makefile  Package10.appxmanifest  ValgrindOut.xml  _.cpp  _.h  __implement.cpp  _app.h  _dependencies.txt  _factory.cpp  _library.h  _main.cpp  _main.inl  _main_.inl  _packages.txt  _static_factory.inl  _static_factory_.inl  _user.h  aaa__library.h  aaa_want_to_remove_simple_application_main_impact.cpp  and_simple_application.vcxproj  app_simple_application.cbp  app_simple_application.def  application.cpp  application.h  cmake_install.cmake  deployment.rc  deps.txt  document.cpp  document.h  framework.h  impact.cpp  impact.h  m_simple_application.vcxproj  main_frame.cpp  main_frame.h  matter.txt  nord_app_simple_application.vcxproj  nord_app_simple_application.vcxproj.filters  nord_impl_app_simple_application.vcxproj  (+16 more)
box/: CMakeLists.txt  Makefile  Package.appxmanifest  Package10.appxmanifest  _.cpp  _.h  _app_simple_box.h  _factory.cpp  _library.h  _main.cpp  _main.inl  _main_.inl  _main_fedora_kde_35.inl  _packages.txt  aaa__library.h  and_simple_box.vcxproj  and_simple_box.vcxproj.filters  app-Info.plist  app_simple_box.cbp  app_simple_box.def  application.cpp  application.h  clang_simple_box.cbp  cmake_install.cmake  cpp.txt  data.txt  deployment.rc  document.cpp  document.h  framework.h  impact.cpp  impact.h  m_app_core_simple_box.def  m_simple_box.vcxproj  m_simple_box.vcxproj.filters  main_frame.cpp  main_frame.h  matter.txt  nord_core_simple_box.vcxproj  nord_core_simple_box.vcxproj.filters  (+12 more)
change_grub_default_entry/: 001.cpp  002.cpp  CMakeLists.txt  Makefile  _.cpp  _.h  _factory.cpp  _library.h  _main.cpp  _main.inl  _main_.inl  _main_fedora_kde_35.inl  _packages.txt  aaa__library.h  and_simple_form.vcxproj  and_simple_form.vcxproj.filters  app_simple_change_grub_default_entry.cbp  app_simple_change_grub_default_entry.def  application.cpp  application.h  change_grub_default_entry.vcxproj  change_grub_default_entry.vcxproj.filters  clang_simple_form.cbp  cmake_install.cmake  deployment.rc  document.cpp  document.h  form.cpp  form.h  form_001.cpp  form_001.h  form_002.cpp  form_002.h  frame.cpp  frame.h  framework.h  impact.cpp  impact.h  m_simple_form.vcxproj  main_frame.cpp  (+26 more)
drawing/: CMakeLists.txt  Makefile  Package10.appxmanifest  ValgrindOut.xml  Version.txt  _.cpp  _.h  __implement.cpp  _app.h  _app_simple_drawing.h  _drawing.h  _factory.cpp  _library.h  _main.cpp  _main.inl  _packages.txt  _static_factory.inl  _static_factory_.inl  aaa__library.h  aaa_want_to_remove_simple_drawing_main_impact.cpp  and_simple_drawing.vcxproj  app_simple_drawing.cbp  app_simple_drawing.def  application.cpp  application.h  clang_simple_drawing.cbp  cmake_install.cmake  deployment.rc  deps.txt  document.cpp  document.h  frame.cpp  frame.h  framework.h  impact.cpp  impact.h  m_simple_drawing.vcxproj  main_frame.cpp  main_frame.h  matter.txt  (+27 more)
form/: 001.cpp  002.cpp  CMakeLists.txt  Makefile  Package10.appxmanifest  _.cpp  _.h  _app.h  _app_simple_form.h  _dependencies.txt  _factory.cpp  _library.h  _main.cpp  _main.inl  _packages.txt  _static_factory.inl  _static_factory_.inl  aaa__library.h  and_simple_form.vcxproj  app_simple_form.cbp  application.cpp  application.h  clang_simple_form.cbp  cmake_install.cmake  cpp.txt  deployment.rc  deps.txt  document.cpp  document.h  form.cpp  form.h  form_001.cpp  form_001.h  form_002.cpp  form_002.h  frame.cpp  frame.h  framework.h  impact.cpp  impact.h  (+40 more)
http_folder_upload/: CMakeLists.txt  ValgrindOut.xml  _.cpp  _.h  _factory.cpp  _main_.inl  _main_fedora_kde_35.inl  aaa_impact.h  aaa_interface_list2.cpp  aaa_interface_list2.h  aaa_main_impact.cpp  aaa_main_impact.h  aaaa_command_list2.cpp  app_simple_http_file_upload.cbp  app_simple_http_file_upload.vcxproj  app_simple_http_file_upload.vcxproj.filters  application.cpp  application.h  command.cpp  command.h  deployment.rc  document.cpp  document.h  frame.cpp  frame.h  impact.cpp  impact.h  impact_folder_path.cpp  impact_folder_path.h  impact_netnode_url.cpp  impact_netnode_url.h  impact_path.cpp  impact_path.h  impact_start_button.cpp  impact_start_button.h  incoming_socket.cpp  incoming_socket.h  incoming_socket_thread.cpp  incoming_socket_thread.h  main_document.cpp  (+10 more)
nanogui_example/: CMakeLists.txt  Makefile  _.h  _app_simple_nanogui_example.h  _factory.cpp  _implement.cpp  _library.h  _main.cpp  _main.inl  _packages.txt  _references.txt  aaa_document.cpp  aaa_want_to_remove_simple_application_main_impact.cpp  and_simple_application.vcxproj  app_simple_nanogui_example.cbp  app_simple_nanogui_example.vcxproj  app_simple_nanogui_example.vcxproj.filters  application.cpp  application.h  cmake_install.cmake  deployment.rc  document.cpp  document.h  example1.cpp  example1.h  example2.cpp  example2.h  example3.cpp  example4.cpp  example_icons.cpp  example_icons.h  framework.h  impact.cpp  impact.h  m_simple_application.vcxproj  main_window.cpp  main_window.h  matter.txt  shared_app_simple_nanogui_example.vcxproj  shared_app_simple_nanogui_example.vcxproj.filters  (+9 more)
nanoui_example/: CMakeLists.txt  _.cpp  _.h  _dependencies.txt  _factory.cpp  _implement.cpp  _main.inl  _references.txt  aaa__library.h  aaa_document.cpp  app_simple_nanoui_example.cbp  app_simple_nanoui_example.def  app_simple_nanoui_example.vcxproj  app_simple_nanoui_example.vcxproj.filters  application.cpp  application.h  deployment.rc  document.h  example1.cpp  example1.h  example2.cpp  example2.h  example3.cpp  example4.cpp  example_icons.cpp  example_icons.h  main.rc  main_window.cpp  main_window.h  matter.txt  nord_app_simple_nanoui_example.vcxproj  resource.h  static_app_simple_nanoui_example.vcxproj  u_app_simple_nanoui_example.def  u_app_simple_nanoui_example.vcxproj  u_app_simple_nanoui_example.vcxproj.filters  winmetro_simple_application.vcxproj
networking_application/: CMakeLists.txt  Makefile  ValgrindOut.xml  _.cpp  _.h  __implement.cpp  _dependencies.txt  _factory.cpp  _library.h  _main.cpp  _main.inl  _main_.inl  _main_fedora_kde_35.inl  (+54 more)
(+1778 files in other folders)
